--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -13,7 +13,7 @@
       <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
     </li>
     <li class="nav-item" [routerLinkActive]="['link-active']">
-      <a class="nav-link text-dark" [routerLink]="['/nova-predstava']">Nova predstava</a>
+      <a class="nav-link text-dark" [routerLink]="['/predstava/dodaj']">Nova predstava</a>
     </li>
   </ul>
 </nav>
