--- a/Server/ClientApp/src/app/predstave/predstave.component.html
+++ b/Server/ClientApp/src/app/predstave/predstave.component.html
@@ -1,7 +1,4 @@
 <div>
   <h1>Predstave</h1>
-  <div *ngFor="let predstava of predstave">
-    <h3>{{predstava.nazivPredstave}} ({{predstava.status}})</h3>
-    <h4>{{predstava.opis}}</h4>
-  </div>
+  <app-predstava *ngFor="let predstava of predstave" [predstava]="predstava"></app-predstava>
 </div>
