--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -1,19 +1,19 @@
 <nav>
-  Pozorište
+  <mat-toolbar color="primary">
+    <span>Pozorište</span>
 
-  <ul>
-    <li
+    <a
       class="nav-item"
       [routerLinkActive]="['link-active']"
       [routerLinkActiveOptions]="{ exact: true }"
     >
       <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-    </li>
-    <li class="nav-item" [routerLinkActive]="['link-active']">
+    </a>
+    <a class="nav-item" [routerLinkActive]="['link-active']">
       <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
-    </li>
-    <li class="nav-item" [routerLinkActive]="['link-active']">
+    </a>
+    <a class="nav-item" [routerLinkActive]="['link-active']">
       <a class="nav-link text-dark" [routerLink]="['/predstava/dodaj']">Nova predstava</a>
-    </li>
-  </ul>
+    </a>
+  </mat-toolbar>
 </nav>
