--- a/Server/ClientApp/src/app/predstave/predstava/predstava.component.scss
+++ b/Server/ClientApp/src/app/predstave/predstava/predstava.component.scss
@@ -1,21 +1,3 @@
 .predstava-wrapper {
-  background-color: white;
-  padding: 20px;
-  border: 1px solid;
-  margin-bottom: 10px;
-  border-radius: 3px;
-  h3 {
-    margin: 0 0 10px;
-  }
-  h4 {
-    font-weight: normal;
-    margin: 10px 0 0;
-  }
-  .buttons-wrapper {
-    margin-top: 20px;
-    button {
-      display: inline-block;
-      margin-right: 20px;
-    }
-  }
+  margin: 0 10px 10px;
 }
