Implementiran servis za autentifikaciju, guard za rute, i direktiva za admin komponente

--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.scss
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.scss
@@ -3,10 +3,14 @@ nav {
     margin-left: 10px;
     color: white;
     text-decoration: none;
+    cursor: pointer;
   }
 
   &.link-active a {
     text-decoration: underline;
   }
 
+  .mat-toolbar {
+    justify-content: space-between;
+  }
 }
