--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -1,19 +1,26 @@
 <nav>
   <mat-toolbar color="primary">
-    <span>Pozorište</span>
+    <div class="nav">
+      <span>Pozorište</span>
 
-    <a
-      class="nav-item"
-      [routerLinkActive]="['link-active']"
-      [routerLinkActiveOptions]="{ exact: true }"
-    >
-      <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-    </a>
-    <a class="nav-item" [routerLinkActive]="['link-active']">
-      <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
-    </a>
-    <a class="nav-item" [routerLinkActive]="['link-active']">
-      <a class="nav-link text-dark" [routerLink]="['/predstava/dodaj']">Nova predstava</a>
-    </a>
+      <a
+        class="nav-item"
+        [routerLinkActive]="['link-active']"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+      </a>
+      <a class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
+      </a>
+      <a class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link text-dark" [routerLink]="['/predstava/dodaj']">Nova predstava</a>
+      </a>
+    </div>
+
+    <div class="auth">
+      <a *ngIf="user" (click)="logout()">{{user.Ime}} ({{user.Username}})</a>
+      <a *ngIf="!user" [routerLink]="['/login']">Prijava</a>
+    </div>
   </mat-toolbar>
 </nav>
