--- a/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
+++ b/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
@@ -7,6 +7,6 @@
   <mat-card-actions>
     <button mat-button>Rezerviši</button>
     <button mat-button (click)="subscribeToNotifications()">Obavesti me</button>
-    <button mat-button [routerLink]="['/predstava/izmeni', predstava.Id]">Izmeni</button>
+    <button mat-button [routerLink]="['/predstava/izmeni', predstava.Id]" *appIsAdmin>Izmeni</button>
   </mat-card-actions>
 </mat-card>
