--- a/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
+++ b/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
@@ -5,7 +5,7 @@
     <p>Opis: {{predstava.opis}}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Rezerviši</button>
+    <button mat-button [routerLink]="['/predstava/', predstava.Id]">Rezerviši</button>
     <button mat-button (click)="subscribeToNotifications()">Obavesti me</button>
     <button mat-button [routerLink]="['/predstava/izmeni', predstava.Id]" *appIsAdmin>Izmeni</button>
   </mat-card-actions>
