--- a/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
+++ b/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
@@ -6,7 +6,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button [routerLink]="['/predstava/', predstava.Id]">Rezerviši</button>
-    <button mat-button (click)="subscribeToNotifications()">Obavesti me</button>
+    <button mat-button *ngIf="predstava.status === 'u pripremi'" (click)="subscribeToNotifications()">Obavesti me</button>
     <button mat-button [routerLink]="['/predstava/izmeni', predstava.Id]" *appIsAdmin>Izmeni</button>
   </mat-card-actions>
 </mat-card>
