--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.scss
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.scss
@@ -4,6 +4,8 @@ nav {
     color: white;
     text-decoration: none;
     cursor: pointer;
+    display: inline-block;
+    position: relative;
   }
 
   &.link-active a {
