--- a/Server/ClientApp/src/app/predstave/predstave.component.html
+++ b/Server/ClientApp/src/app/predstave/predstave.component.html
@@ -1,4 +1,4 @@
-<div class="predstave-page-wrapper">
+<div class="card-container predstave-page-wrapper">
   <h1>Predstave</h1>
   <app-predstava *ngFor="let predstava of predstave" [predstava]="predstava"></app-predstava>
 </div>
