--- a/Server/ClientApp/src/app/korpa/korpa.component.html
+++ b/Server/ClientApp/src/app/korpa/korpa.component.html
@@ -22,7 +22,7 @@
 
     <ng-container matColumnDef="cena">
       <th mat-header-cell *matHeaderCellDef>Cena</th>
-      <td mat-cell *matCellDef="let rez">0.00 RSD</td>
+      <td mat-cell *matCellDef="let rez">{{rez.izvodjenje.cena}}.00 RSD</td>
     </ng-container>
 
     <ng-container matColumnDef="akcije">
@@ -35,6 +35,11 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <div class="total">
+    Ukupno za plaćanje: {{korpaService.ukupnaCena()}}.00 RSD
+    <button mat-button type="button" color="primary" (click)="zapocniPlacanje()">Plati</button>
+  </div>
 
   <div *ngIf="rezervacije.length === 0" class="empty">Korpa je prazna.</div>
 </mat-card>
