Dovršena email obaveštenja za nove predstave

--- a/Server/ClientApp/src/app/register/register.component.html
+++ b/Server/ClientApp/src/app/register/register.component.html
@@ -27,6 +27,10 @@
       </div>
     </mat-form-field>
 
+    <mat-checkbox formControlName="emailObavestenja">Obaveštenja o novim predstavama</mat-checkbox>
+    <br>
+    <br>
+
     <div>
       <p>Registracijom potvrđujete da se slažete sa <a href="/uslovi-koriscenja">Uslovima korišćenja</a>.</p>
       <button mat-raised-button [disabled]="loading" color="primary">
