Dodata autorizacija na kontrolerima

--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -3,13 +3,13 @@
     <div class="nav">
       <span>Pozorište</span>
 
-      <a
-        class="nav-item"
-        [routerLinkActive]="['link-active']"
-        [routerLinkActiveOptions]="{ exact: true }"
-      >
-        <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-      </a>
+<!--      <a-->
+<!--        class="nav-item"-->
+<!--        [routerLinkActive]="['link-active']"-->
+<!--        [routerLinkActiveOptions]="{ exact: true }"-->
+<!--      >-->
+<!--        <a class="nav-link text-dark" [routerLink]="['/']">Home</a>-->
+<!--      </a>-->
       <a class="nav-item" [routerLinkActive]="['link-active']">
         <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
       </a>
