--- a/Server/ClientApp/src/app/register/register.component.html
+++ b/Server/ClientApp/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-card class="register-form">
+<mat-card class="card-container register-form">
   <h2>Registracija</h2>
   <p>Registracijom kreirate nalog koji Vam omogućava da kupujete karte za predstave.</p>
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
