--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -1,29 +1,29 @@
 <nav>
   <mat-toolbar color="primary">
     <div class="nav">
-      <span>Pozorište</span>
-
-<!--      <a-->
-<!--        class="nav-item"-->
-<!--        [routerLinkActive]="['link-active']"-->
-<!--        [routerLinkActiveOptions]="{ exact: true }"-->
-<!--      >-->
-<!--        <a class="nav-link text-dark" [routerLink]="['/']">Home</a>-->
-<!--      </a>-->
-      <a class="nav-item" [routerLinkActive]="['link-active']">
+      <span class="nav-item" [routerLinkActive]="['link-active']">
         <a class="nav-link text-dark" [routerLink]="['/predstave']">Predstave</a>
-      </a>
-      <a class="nav-item" [routerLinkActive]="['link-active']">
+      </span>
+      <span class="nav-item" [routerLinkActive]="['link-active']">
         <a class="nav-link text-dark" [routerLink]="['/predstava/dodaj']" *appIsAdmin>Nova predstava</a>
-      </a>
-      <a class="nav-item" [routerLinkActive]="['link-active']" *ngIf="korpaService.brojRezervacija() > 0">
+      </span>
+      <span class="nav-item" [routerLinkActive]="['link-active']" *ngIf="korpaService.brojRezervacija() > 0">
         <a class="nav-link text-dark" [routerLink]="['/korpa']" [matBadge]="korpaService.brojRezervacija()" matBadgeColor="warn">Korpa</a>
-      </a>
+      </span>
     </div>
 
-    <div class="auth">
-      <a *ngIf="user" (click)="logout()">Prijavljeni kao {{user.Username}}</a>
-      <a *ngIf="!user" [routerLink]="['/login']">Prijava</a>
+
+    <div>
+      <span class="nav-item" [routerLinkActive]="['link-active']" *ngIf="korpaService.brojRezervacija() > 0">
+        <a class="nav-link text-dark" [routerLink]="['/korpa']" [matBadge]="korpaService.brojRezervacija()" matBadgeColor="warn">Korpa</a>
+      </span>
+      <span class="nav-item" [routerLinkActive]="['link-active']">
+        <a class="nav-link text-dark" [routerLink]="['/obavestenja']">Obaveštenja</a>
+      </span>
+      <span class="nav-item">
+        <a *ngIf="user" (click)="logout()">Prijavljeni kao {{user.Username}}</a>
+        <a *ngIf="!user" [routerLink]="['/login']">Prijava</a>
+      </span>
     </div>
   </mat-toolbar>
 </nav>
