--- a/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
+++ b/Server/ClientApp/src/app/nav-sidebar/nav-sidebar.component.html
@@ -17,7 +17,7 @@
       <span class="nav-item" [routerLinkActive]="['link-active']" *ngIf="korpaService.brojRezervacija() > 0">
         <a class="nav-link text-dark" [routerLink]="['/korpa']" [matBadge]="korpaService.brojRezervacija()" matBadgeColor="warn">Korpa</a>
       </span>
-      <span class="nav-item" [routerLinkActive]="['link-active']">
+      <span class="nav-item" [routerLinkActive]="['link-active']" *appIsAuth>
         <a class="nav-link text-dark" [routerLink]="['/obavestenja']">Obaveštenja</a>
       </span>
       <span class="nav-item">
