--- a/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
+++ b/Server/ClientApp/src/app/predstave/predstava/predstava.component.html
@@ -5,8 +5,10 @@
     <p>Opis: {{predstava.opis}}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button [routerLink]="['/predstava/', predstava.Id]">Rezerviši</button>
-    <button mat-button *ngIf="predstava.status === 'u pripremi'" (click)="subscribeToNotifications()">Obavesti me</button>
+    <button mat-button *ngIf="predstava.status === 'aktivna'" [routerLink]="['/predstava/', predstava.Id]" color="primary">Rezerviši</button>
+    <ng-container *appIsAuth>
+      <button mat-button *ngIf="predstava.status === 'u pripremi'" (click)="subscribeToNotifications()" color="accent">Obavesti me</button>
+    </ng-container>
     <button mat-button [routerLink]="['/predstava/izmeni', predstava.Id]" *appIsAdmin>Izmeni</button>
   </mat-card-actions>
 </mat-card>
